--- a/Python101.ipynb
+++ b/Python101.ipynb
@@ -304,12 +304,12 @@
         "5*'6'"
       ],
       "metadata": {
-        "id": "627ZnCbY35m4",
-        "outputId": "02ed12a5-87e1-4de7-c043-bdc68682a4e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "627ZnCbY35m4",
+        "outputId": "02ed12a5-87e1-4de7-c043-bdc68682a4e1"
       },
       "execution_count": 17,
       "outputs": [
@@ -331,7 +331,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Quiz1"
+        "###Quiz1\n",
+        "print มาก ที่มี ก.ไก่ 100 ตัว"
       ],
       "metadata": {
         "id": "S7fT4Cbh44ii"
@@ -343,12 +344,12 @@
         "\"มาก\" + 100*\"ก\""
       ],
       "metadata": {
-        "id": "YDnWVgzg4TOO",
-        "outputId": "40e77cdb-23fc-4e3b-aba3-3e55b67437f6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "YDnWVgzg4TOO",
+        "outputId": "40e77cdb-23fc-4e3b-aba3-3e55b67437f6"
       },
       "execution_count": 20,
       "outputs": [
@@ -382,11 +383,11 @@
         "print('stat','สถิติ',sep='')"
       ],
       "metadata": {
-        "id": "P27Ba5rHwPyf",
-        "outputId": "18247ae7-90d5-4df8-b31f-0312d0e6a6e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "P27Ba5rHwPyf",
+        "outputId": "18247ae7-90d5-4df8-b31f-0312d0e6a6e8"
       },
       "execution_count": 5,
       "outputs": [
@@ -406,11 +407,11 @@
         "print('SIDS')"
       ],
       "metadata": {
-        "id": "-lttb9CzxxHp",
-        "outputId": "67297b2f-f728-4ed0-f8d7-833463c4b5fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-lttb9CzxxHp",
+        "outputId": "67297b2f-f728-4ed0-f8d7-833463c4b5fc"
       },
       "execution_count": 7,
       "outputs": [
@@ -440,11 +441,11 @@
         "print('SIDS')"
       ],
       "metadata": {
-        "id": "S4QKOYKDyEbU",
-        "outputId": "67465242-ea27-4e0b-aa27-07f640fca38f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "S4QKOYKDyEbU",
+        "outputId": "67465242-ea27-4e0b-aa27-07f640fca38f"
       },
       "execution_count": 9,
       "outputs": [
@@ -493,11 +494,11 @@
         "print(type(a),type(b)) ##เช็คชนิดตัวแปร"
       ],
       "metadata": {
-        "id": "uZTOvxBq0RKs",
-        "outputId": "5d8d6213-00f1-42d5-8d06-7692a275a5c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uZTOvxBq0RKs",
+        "outputId": "5d8d6213-00f1-42d5-8d06-7692a275a5c5"
       },
       "execution_count": 11,
       "outputs": [
@@ -527,11 +528,11 @@
         "c"
       ],
       "metadata": {
-        "id": "KQOqsBvz00Q5",
-        "outputId": "64f8f142-b07a-424c-f43a-a1741a7eb0e9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KQOqsBvz00Q5",
+        "outputId": "64f8f142-b07a-424c-f43a-a1741a7eb0e9"
       },
       "execution_count": 13,
       "outputs": [
@@ -562,11 +563,11 @@
         "7%4"
       ],
       "metadata": {
-        "id": "faCErMo21JM4",
-        "outputId": "2e4cce57-44f3-43f7-d58e-71b49a8b1e55",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "faCErMo21JM4",
+        "outputId": "2e4cce57-44f3-43f7-d58e-71b49a8b1e55"
       },
       "execution_count": 14,
       "outputs": [
@@ -597,11 +598,11 @@
         "2**10"
       ],
       "metadata": {
-        "id": "HyMewRBn1vbY",
-        "outputId": "03177598-dc2d-4f88-f255-8b3df3ec2788",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HyMewRBn1vbY",
+        "outputId": "03177598-dc2d-4f88-f255-8b3df3ec2788"
       },
       "execution_count": 15,
       "outputs": [
@@ -632,12 +633,12 @@
         "'1'+'3'"
       ],
       "metadata": {
-        "id": "pdwzGysg2NsI",
-        "outputId": "5d0b5e2f-c8b1-4c90-b7ff-5a3f2334ce48",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "pdwzGysg2NsI",
+        "outputId": "5d0b5e2f-c8b1-4c90-b7ff-5a3f2334ce48"
       },
       "execution_count": 16,
       "outputs": [
