--- a/Python101.ipynb
+++ b/Python101.ipynb
@@ -166,7 +166,7 @@
         "id": "v0rQ1CHXRSMn",
         "outputId": "08a24329-5b06-43c7-d098-eed7d691268d"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -188,7 +188,7 @@
       "metadata": {
         "id": "lWOn8HAbRhdK"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -227,7 +227,7 @@
         "id": "lhqZSBjgR_nk",
         "outputId": "1e0341b2-fc1b-4f71-873c-c631c0a44a92"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -256,7 +256,7 @@
         "id": "TEQReEjwqPXM",
         "outputId": "45bfebca-bb44-42d7-ffab-34d497fe9336"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -311,7 +311,7 @@
         "id": "627ZnCbY35m4",
         "outputId": "02ed12a5-87e1-4de7-c043-bdc68682a4e1"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -351,7 +351,7 @@
         "id": "YDnWVgzg4TOO",
         "outputId": "40e77cdb-23fc-4e3b-aba3-3e55b67437f6"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -389,7 +389,7 @@
         "id": "P27Ba5rHwPyf",
         "outputId": "18247ae7-90d5-4df8-b31f-0312d0e6a6e8"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,7 +413,7 @@
         "id": "-lttb9CzxxHp",
         "outputId": "67297b2f-f728-4ed0-f8d7-833463c4b5fc"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,7 +447,7 @@
         "id": "S4QKOYKDyEbU",
         "outputId": "67465242-ea27-4e0b-aa27-07f640fca38f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -485,7 +485,7 @@
       "metadata": {
         "id": "pKocmSVk0Lv-"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -500,7 +500,7 @@
         "id": "uZTOvxBq0RKs",
         "outputId": "5d8d6213-00f1-42d5-8d06-7692a275a5c5"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -519,7 +519,7 @@
       "metadata": {
         "id": "I_HlmAr70tC4"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -534,7 +534,7 @@
         "id": "KQOqsBvz00Q5",
         "outputId": "64f8f142-b07a-424c-f43a-a1741a7eb0e9"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -569,7 +569,7 @@
         "id": "faCErMo21JM4",
         "outputId": "2e4cce57-44f3-43f7-d58e-71b49a8b1e55"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -604,7 +604,7 @@
         "id": "HyMewRBn1vbY",
         "outputId": "03177598-dc2d-4f88-f255-8b3df3ec2788"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -640,7 +640,7 @@
         "id": "pdwzGysg2NsI",
         "outputId": "5d0b5e2f-c8b1-4c90-b7ff-5a3f2334ce48"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1218,6 +1218,123 @@
     {
       "cell_type": "markdown",
       "source": [
+        "decimal point (ทศนิยมกี่ตำแหน่ง) || digit"
+      ],
+      "metadata": {
+        "id": "8STR1nAhD3Rz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "decimal"
+      ],
+      "metadata": {
+        "id": "XRgh3rBYFb3N"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f'{1.0000:.2f}'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "isruciSGD2KU",
+        "outputId": "15cd61a1-214a-4d0c-8021-79a13dd32b06"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'1.00'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f'{1.009:.2f}'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "vXe281NOEWm6",
+        "outputId": "eb88f9da-8713-41a5-9462-e6ee75ad138e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'1.01'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "digit"
+      ],
+      "metadata": {
+        "id": "Tqzn60jfFg3r"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f'{1:03d}'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "EJYfx1YUFi1S",
+        "outputId": "dbe80362-1827-4db5-c6df-c03913f21f47"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'001'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## ชนิดของตัวแปร\n"
       ],
       "metadata": {
@@ -1246,7 +1363,7 @@
       "metadata": {
         "id": "WZ7UHpFRtirB"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1257,7 +1374,7 @@
       "metadata": {
         "id": "_7-1_R8YtmPu"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -1270,9 +1387,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iR1F_3gXtpqA",
-        "outputId": "679e35b2-ae6d-40bd-dbea-33d15ae6cdf1"
+        "outputId": "b1d71431-bc75-4839-9f68-7934542e80a2"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -1292,7 +1409,7 @@
       "metadata": {
         "id": "ToiDzo_RtteU"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -1305,9 +1422,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SD5NdgoOtv54",
-        "outputId": "2ef04c20-c9c2-4c57-85e0-ea2271b19df0"
+        "outputId": "bc929506-6749-478c-fa96-0e13a57f9f69"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -1336,7 +1453,7 @@
       "metadata": {
         "id": "1kvzb3yyt3zB"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1350,9 +1467,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e3iN8lIrt7AX",
-        "outputId": "a0e5f0f2-7249-4d72-bea4-4927f6ed28da"
+        "outputId": "5aa68007-892d-4c73-e4ea-13b911d476d0"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1382,7 +1499,7 @@
       "metadata": {
         "id": "UCeFO3Xhulln"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -1395,9 +1512,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Mzll_99fuuUC",
-        "outputId": "f77570af-40be-4ba8-9ab2-a6ec008eb13c"
+        "outputId": "c67972ca-d027-4912-e076-00dd410b6b8b"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1407,7 +1524,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 11
         }
       ]
     },
@@ -1421,9 +1538,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k8OSG4wEu7qr",
-        "outputId": "e9dabc40-f5dc-40f0-f9ba-007b6b14fb68"
+        "outputId": "ca8c0166-e8e7-4444-87f8-912985304ee8"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1433,7 +1550,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 12
         }
       ]
     },
@@ -1447,15 +1564,38 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EUHK9PhGvB4Z",
-        "outputId": "ad8fcc03-6acc-4938-de62-515078a2c24c"
+        "outputId": "ac38ebb4-9cb8-4ec3-94e2-d764d445d0fd"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "7.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print((fl_a),type(fl_a))"
+      ],
+      "metadata": {
+        "id": "cPPOI9ectWbh",
+        "outputId": "e0bf8d2c-d3d0-4579-e5fd-bc12cd699dc4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7.0 <class 'float'>\n"
           ]
         }
       ]
@@ -1468,6 +1608,15 @@
       "metadata": {
         "id": "eWXJHDlavIHW"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "UZGi8hfRtTqi"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1667,15 +1816,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "----- จบคาบ 2 ------"
-      ],
-      "metadata": {
-        "id": "HmpGbHUCwZf9"
-      }
     },
     {
       "cell_type": "markdown",
@@ -1921,11 +2061,34 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### operators (บวก (+), ลบ (-), คูณ (*), หาร (/), modulo (%), and (&), or (|))"
+        "### operators (บวก (+), ลบ (-), คูณ (*), หาร (/), modulo (%), and (&), or (|),ยกกำลัง (**)"
       ],
       "metadata": {
         "id": "w_5digYogMc3"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(200**(1/2))"
+      ],
+      "metadata": {
+        "id": "nb-77oHj0IAr",
+        "outputId": "bdaecf45-7710-45d4-e262-3fdc3718baab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "14.142135623730951\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
