--- a/Data_Structure.ipynb
+++ b/Data_Structure.ipynb
@@ -336,7 +336,7 @@
       "metadata": {
         "id": "w8j852-N9D0C"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -352,7 +352,7 @@
         "id": "1A40gYHq9sFO",
         "outputId": "d3ce080b-2834-4c54-d1a3-e9679daba8f0"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -824,6 +824,122 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Quiz 2\n",
+        "กำหนด list เป็นประโยคคำว่า\n",
+        "\"Department of Statistics, Faculty of Science, Khon Kean Univercity, Thailand\"\n",
+        "\n",
+        "##1.ตัดมาเฉพาะคำว่า Faculty of Science\n",
+        "##2.ตัดมาทุกตัวแบบเว้นบรรทัดกระโดดทีละ 3 ตัว\n",
+        "##3.ตัดคำว่า Khon Kean Univercity มาเขียนกลับหลัง"
+      ],
+      "metadata": {
+        "id": "GYheir362U4v"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_q2 = \"Department of Statistics, Faculty of Science, Khon Kean Univercity, Thailand\""
+      ],
+      "metadata": {
+        "id": "WBOQ_ndV3Zd0"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_q2[26:44] ##1"
+      ],
+      "metadata": {
+        "id": "c5CThRNi3pyB",
+        "outputId": "6f44e773-4b10-4d33-c172-9efe36e73156",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Faculty of Science'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_q2[:74:3] ##2"
+      ],
+      "metadata": {
+        "id": "eRtMrcqS4Kpa",
+        "outputId": "98f4703c-af23-47e6-90d1-2d878cdf7536",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Damtftii,al  ic oKnnei,hl'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_q2[65:45:-1]  ##3"
+      ],
+      "metadata": {
+        "id": "pM_X6vUK4dYQ",
+        "outputId": "576be889-9372-4658-a4a8-812948b840f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'yticrevinU naeK nohK'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### List Slicing ```:```\n"
       ],
       "metadata": {
@@ -853,6 +969,17 @@
     {
       "cell_type": "code",
       "source": [
+        "list_a = [0,1,2,3,4,5,6]"
+      ],
+      "metadata": {
+        "id": "ypQSQZxA0oUP"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "list_a # เเสดง list_a"
       ],
       "metadata": {
@@ -860,19 +987,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2_JrbypKDNaE",
-        "outputId": "03e482db-52a5-47ad-8b92-7f0664cc40c2"
+        "outputId": "8b833ff2-f709-440a-cb81-d2651975aa6a"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[1, 2, 3, 4, 5, 6]"
+              "[0, 1, 2, 3, 4, 5, 6]"
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 4
         }
       ]
     },
@@ -886,19 +1013,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SC-N7iabDvI_",
-        "outputId": "01e27873-4667-4a67-d743-f845cc06486b"
+        "outputId": "fc69861b-e4d6-4868-981e-7b6d89131641"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3"
+              "2"
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 5
         }
       ]
     },
@@ -922,9 +1049,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lNle8MdVD4iF",
-        "outputId": "1bd0e4ed-8045-4ae2-8e29-0ad2618981e9"
+        "outputId": "d8fcfcad-6781-4a0e-f93c-9c31784409a1"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -934,7 +1061,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 6
         }
       ]
     },
@@ -948,19 +1075,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KIryJE5oGV0K",
-        "outputId": "72f4e34f-0b4e-44dd-c1fb-b1b2aa5e75ca"
+        "outputId": "1675e765-8c09-4c1c-b822-21e42fbe9822"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[1, 2, 3, 4]"
+              "[0, 1, 2, 3]"
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 7
         }
       ]
     },
@@ -974,19 +1101,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hh9fMH7ED8Qh",
-        "outputId": "5ba8aca8-fbd8-49b2-e34e-ac33c72c2c76"
+        "outputId": "cdb27002-431e-4f44-8baa-5ba6f236d1c0"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[2, 3, 4]"
+              "[1, 2, 3]"
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 9
         }
       ]
     },
@@ -1000,19 +1127,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cdPQJNblFswJ",
-        "outputId": "294023d7-39f0-42b2-9dec-f121c4d9129c"
+        "outputId": "f0168652-9923-4bec-9472-984b06f20b4a"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[1, 2, 3, 4, 5, 6]"
+              "[0, 1, 2, 3, 4, 5, 6]"
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 8
         }
       ]
     },
@@ -1028,12 +1155,38 @@
     {
       "cell_type": "code",
       "source": [
+        "list_a[1:-1:2]"
+      ],
+      "metadata": {
+        "id": "i05GUb0o1Ae2",
+        "outputId": "de6150db-4408-4c90-b5e4-7868c639154d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 3, 5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "list_c = [1,2,3,4,5,6,7,8,9,10,11,12,13] # กำหนด list_c"
       ],
       "metadata": {
         "id": "F8XgeKgAGlje"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
