--- a/Data_Structure.ipynb
+++ b/Data_Structure.ipynb
@@ -880,7 +880,7 @@
     {
       "cell_type": "code",
       "source": [
-        "list_q2[:74:3] ##2"
+        "list_q2[:77:3] ##2"
       ],
       "metadata": {
         "colab": {
@@ -888,22 +888,22 @@
           "height": 36
         },
         "id": "eRtMrcqS4Kpa",
-        "outputId": "98f4703c-af23-47e6-90d1-2d878cdf7536"
+        "outputId": "b2b637fb-f183-4170-fa6c-5daec1738f46"
       },
-      "execution_count": 20,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'Damtftii,al  ic oKnnei,hl'"
+              "'Damtftii,al  ic oKnnei,hld'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 27
         }
       ]
     },
