--- a/Data_Structure.ipynb
+++ b/Data_Structure.ipynb
@@ -844,7 +844,7 @@
       "metadata": {
         "id": "WBOQ_ndV3Zd0"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -860,7 +860,7 @@
         "id": "c5CThRNi3pyB",
         "outputId": "6f44e773-4b10-4d33-c172-9efe36e73156"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -890,7 +890,7 @@
         "id": "eRtMrcqS4Kpa",
         "outputId": "b2b637fb-f183-4170-fa6c-5daec1738f46"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -920,7 +920,7 @@
         "id": "pM_X6vUK4dYQ",
         "outputId": "576be889-9372-4658-a4a8-812948b840f9"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -974,7 +974,7 @@
       "metadata": {
         "id": "ypQSQZxA0oUP"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -989,7 +989,7 @@
         "id": "2_JrbypKDNaE",
         "outputId": "8b833ff2-f709-440a-cb81-d2651975aa6a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1015,7 +1015,7 @@
         "id": "SC-N7iabDvI_",
         "outputId": "fc69861b-e4d6-4868-981e-7b6d89131641"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1051,7 +1051,7 @@
         "id": "lNle8MdVD4iF",
         "outputId": "d8fcfcad-6781-4a0e-f93c-9c31784409a1"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1077,7 +1077,7 @@
         "id": "KIryJE5oGV0K",
         "outputId": "1675e765-8c09-4c1c-b822-21e42fbe9822"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1103,7 +1103,7 @@
         "id": "Hh9fMH7ED8Qh",
         "outputId": "cdb27002-431e-4f44-8baa-5ba6f236d1c0"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1129,7 +1129,7 @@
         "id": "cdPQJNblFswJ",
         "outputId": "f0168652-9923-4bec-9472-984b06f20b4a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1164,7 +1164,7 @@
         "id": "i05GUb0o1Ae2",
         "outputId": "de6150db-4408-4c90-b5e4-7868c639154d"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1186,7 +1186,7 @@
       "metadata": {
         "id": "F8XgeKgAGlje"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1368,7 +1368,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## HW 2"
+        "## HW 1"
       ],
       "metadata": {
         "id": "uBTAm2P0JHlD"
@@ -1377,17 +1377,176 @@
     {
       "cell_type": "markdown",
       "source": [
-        "คำนวณเวลาเป็นวินาทีของเวลาต่อไปนี้โดยใช้คำสั่ง split() ช่วย (print ออกมาให้สวยงาม)\n",
+        "คำนวณช่วงเวลาต่อไปนี้ ห่างกันกี่ชั่วโมง กี่นาที กี่วินาที (print ออกมาให้สวยงาม)\n",
         "\n",
-        "- 12:30:15\n",
-        "- 13:41:07\n",
-        "- 09:11:50\n",
-        "- 21:30:15\n",
-        "- 03:10:15\n"
+        "- 12:30:15 - 13:41:07\n",
+        "- 09:11:50 - 21:30:15\n",
+        "- 19:25:30 - 03:10:15\n"
       ],
       "metadata": {
         "id": "OZlParATO7fx"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ข้อ 1\n"
+      ],
+      "metadata": {
+        "id": "pou_RML1xL6E"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = '12:30:15'\n",
+        "a_sp = a.split(':')\n",
+        "print(a_sp)\n",
+        "ans_a= int(a_sp[0])*3600+int (a_sp[1])*60+int (a_sp[2])\n",
+        "b = '13:41:07'\n",
+        "b_sp = b.split(':')\n",
+        "print(b_sp)\n",
+        "ans_b= int(b_sp[0])*3600+int (b_sp[1])*60+int (b_sp[2])\n",
+        "ans = ans_b-ans_a\n",
+        "print(f'12:30:15 - 13:41:07แปลงเป็นความต่างของเวลาเป็นวินาทีได้ {ans} วินาที')\n",
+        "seconds = ans\n",
+        "\n",
+        "seconds = seconds % (24 * 3600)\n",
+        "hour = seconds // 3600\n",
+        "seconds %= 3600\n",
+        "minutes = seconds // 60\n",
+        "seconds %= 60\n",
+        "\n",
+        "print(\"ห่างกัน\",(hour),\"ชั่วโมง\",(minutes),\"นาที\",(seconds),\"วินาที\")"
+      ],
+      "metadata": {
+        "id": "NB2F8yL4xQl0",
+        "outputId": "8443fada-c728-49e4-ad0c-482fd7d6ae1f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['12', '30', '15']\n",
+            "['13', '41', '07']\n",
+            "12:30:15 - 13:41:07แปลงเป็นความต่างของเวลาเป็นวินาทีได้ 4252 วินาที\n",
+            "ห่างกัน 1 ชั่วโมง 10 นาที 52 วินาที\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ข้อ 2"
+      ],
+      "metadata": {
+        "id": "QafBdtO2xYoy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = '09:11:50'\n",
+        "a_sp = a.split(':')\n",
+        "print(a_sp)\n",
+        "ans_a= int(a_sp[0])*3600+int (a_sp[1])*60+int (a_sp[2])\n",
+        "b = '21:30:15'\n",
+        "b_sp = b.split(':')\n",
+        "print(b_sp)\n",
+        "ans_b= int(b_sp[0])*3600+int (b_sp[1])*60+int (b_sp[2])\n",
+        "ans = ans_b-ans_a\n",
+        "print(f'09:11:50 - 21:30:15แปลงเป็นความต่างของเวลาเป็นวินาทีได้ {ans} วินาที')\n",
+        "seconds = ans\n",
+        "\n",
+        "seconds = seconds % (24 * 3600)\n",
+        "hour = seconds // 3600\n",
+        "seconds %= 3600\n",
+        "minutes = seconds // 60\n",
+        "seconds %= 60\n",
+        "\n",
+        "print(\"ห่างกัน\",(hour),\"ชั่วโมง\",(minutes),\"นาที\",(seconds),\"วินาที\")"
+      ],
+      "metadata": {
+        "id": "J0mbhmYgxnrJ",
+        "outputId": "4b74d77b-92bd-4c64-e783-2a2056170515",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['09', '11', '50']\n",
+            "['21', '30', '15']\n",
+            "09:11:50 - 21:30:15แปลงเป็นความต่างของเวลาเป็นวินาทีได้ 44305 วินาที\n",
+            "ห่างกัน 12 ชั่วโมง 18 นาที 25 วินาที\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ข้อ 3"
+      ],
+      "metadata": {
+        "id": "4GWM_j3lxpnq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = '19:25:30'\n",
+        "a_sp = a.split(':')\n",
+        "print(a_sp)\n",
+        "ans_a= int(a_sp[0])*3600+int (a_sp[1])*60+int (a_sp[2])\n",
+        "b = '03:10:15'\n",
+        "b_sp = b.split(':')\n",
+        "print(b_sp)\n",
+        "ans_b= int(b_sp[0])*3600+int (b_sp[1])*60+int (b_sp[2])\n",
+        "ans = ans_b-ans_a\n",
+        "print(f'09:11:50 - 21:30:15แปลงเป็นความต่างของเวลาเป็นวินาทีได้ {-ans} วินาที')\n",
+        "\n",
+        "seconds = ans\n",
+        "seconds = seconds % (24 * 3600)\n",
+        "\n",
+        "hour = seconds // 3600\n",
+        "seconds %= 3600\n",
+        "\n",
+        "minutes = seconds // 60\n",
+        "seconds %= 60\n",
+        "\n",
+        "print(\"ห่างกัน\",(hour),\"ชั่วโมง\",(minutes),\"นาที\",(seconds),\"วินาที\")"
+      ],
+      "metadata": {
+        "id": "ri745lBfxsZw",
+        "outputId": "44b4f768-cf31-4489-8a43-9a036b49a251",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['19', '25', '30']\n",
+            "['03', '10', '15']\n",
+            "09:11:50 - 21:30:15แปลงเป็นความต่างของเวลาเป็นวินาทีได้ 58515 วินาที\n",
+            "ห่างกัน 7 ชั่วโมง 44 นาที 45 วินาที\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
