--- a/Data_Structure.ipynb
+++ b/Data_Structure.ipynb
@@ -1426,7 +1426,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1479,7 +1479,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1534,7 +1534,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2320,7 +2320,7 @@
       "metadata": {
         "id": "hXAdabpKYT-3"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -3231,6 +3231,97 @@
       "source": [],
       "metadata": {
         "id": "MuWEUQMYOvZh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## HW 2\n",
+        "สร้าง logo พรรคก้าวไกล"
+      ],
+      "metadata": {
+        "id": "62DvBUSej5hI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "GG = np.zeros((19,18))\n",
+        "#วงนอก\n",
+        "GG[1,2:17] = 66\n",
+        "GG[2,2:17] = 66\n",
+        "GG[3,15:18] = 66\n",
+        "GG[4,13:16] = 66\n",
+        "GG[5,12:15] = 66\n",
+        "GG[6,11:14] = 66\n",
+        "GG[7,10:13] = 66\n",
+        "GG[8,9:12] = 66\n",
+        "GG[9,8:11] = 66\n",
+        "GG[10,7:10] = 66\n",
+        "GG[11,6:9] = 66\n",
+        "GG[12,5:8] = 66\n",
+        "GG[13,4:7] = 66\n",
+        "GG[14,3:6] = 66\n",
+        "GG[15,2:5] = 66\n",
+        "GG[16,2:4] = 66\n",
+        "GG[17,2:3] = 66\n",
+        "\n",
+        "#วงใน\n",
+        "GG[4,2:10] = 66\n",
+        "GG[5,2:9] = 66\n",
+        "GG[6,6:9] = 66\n",
+        "GG[7,5:8] = 66\n",
+        "GG[8,4:7] = 66\n",
+        "GG[9,3:6] = 66\n",
+        "GG[10,2:5] = 66\n",
+        "GG[11,2:4] = 66\n",
+        "GG[12,2:3] = 66\n",
+        "\n",
+        "print(GG)"
+      ],
+      "metadata": {
+        "id": "vz2IBdREkD98",
+        "outputId": "81022a6a-f3bc-46f6-8cbe-65ab51d271e6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+            " [ 0.  0. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66.  0.]\n",
+            " [ 0.  0. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66.  0.]\n",
+            " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0. 66. 66. 66.]\n",
+            " [ 0.  0. 66. 66. 66. 66. 66. 66. 66. 66.  0.  0.  0. 66. 66. 66.  0.  0.]\n",
+            " [ 0.  0. 66. 66. 66. 66. 66. 66. 66.  0.  0.  0. 66. 66. 66.  0.  0.  0.]\n",
+            " [ 0.  0.  0.  0.  0.  0. 66. 66. 66.  0.  0. 66. 66. 66.  0.  0.  0.  0.]\n",
+            " [ 0.  0.  0.  0.  0. 66. 66. 66.  0.  0. 66. 66. 66.  0.  0.  0.  0.  0.]\n",
+            " [ 0.  0.  0.  0. 66. 66. 66.  0.  0. 66. 66. 66.  0.  0.  0.  0.  0.  0.]\n",
+            " [ 0.  0.  0. 66. 66. 66.  0.  0. 66. 66. 66.  0.  0.  0.  0.  0.  0.  0.]\n",
+            " [ 0.  0. 66. 66. 66.  0.  0. 66. 66. 66.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+            " [ 0.  0. 66. 66.  0.  0. 66. 66. 66.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+            " [ 0.  0. 66.  0.  0. 66. 66. 66.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+            " [ 0.  0.  0.  0. 66. 66. 66.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+            " [ 0.  0.  0. 66. 66. 66.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+            " [ 0.  0. 66. 66. 66.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+            " [ 0.  0. 66. 66.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+            " [ 0.  0. 66.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+            " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "B9-NctQ_lA5N"
       },
       "execution_count": null,
       "outputs": []
