--- a/Basic_Programming_Concepts.ipynb
+++ b/Basic_Programming_Concepts.ipynb
@@ -1014,79 +1014,112 @@
       "metadata": {
         "id": "IvD-zlG_yWCD"
       },
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "Background = 3\n",
-        "GG = Background * np.ones((19,18))\n",
+        "def jaw_1(x) :\n",
+        "  GG = x * np.ones((19,18))\n",
         "#วงนอก\n",
-        "GG[1,2:17] = 66\n",
-        "GG[2,2:17] = 66\n",
-        "GG[3,15:18] = 66\n",
-        "GG[4,13:16] = 66\n",
-        "GG[5,12:15] = 66\n",
-        "GG[6,11:14] = 66\n",
-        "GG[7,10:13] = 66\n",
-        "GG[8,9:12] = 66\n",
-        "GG[9,8:11] = 66\n",
-        "GG[10,7:10] = 66\n",
-        "GG[11,6:9] = 66\n",
-        "GG[12,5:8] = 66\n",
-        "GG[13,4:7] = 66\n",
-        "GG[14,3:6] = 66\n",
-        "GG[15,2:5] = 66\n",
-        "GG[16,2:4] = 66\n",
-        "GG[17,2:3] = 66\n",
+        "  GG[1,2:17] = 66\n",
+        "  GG[2,2:17] = 66\n",
+        "  GG[3,15:18] = 66\n",
+        "  GG[4,13:16] = 66\n",
+        "  GG[5,12:15] = 66\n",
+        "  GG[6,11:14] = 66\n",
+        "  GG[7,10:13] = 66\n",
+        "  GG[8,9:12] = 66\n",
+        "  GG[9,8:11] = 66\n",
+        "  GG[10,7:10] = 66\n",
+        "  GG[11,6:9] = 66\n",
+        "  GG[12,5:8] = 66\n",
+        "  GG[13,4:7] = 66\n",
+        "  GG[14,3:6] = 66\n",
+        "  GG[15,2:5] = 66\n",
+        "  GG[16,2:4] = 66\n",
+        "  GG[17,2:3] = 66\n",
         "\n",
         "#วงใน\n",
-        "GG[4,2:10] = 66\n",
-        "GG[5,2:9] = 66\n",
-        "GG[6,6:9] = 66\n",
-        "GG[7,5:8] = 66\n",
-        "GG[8,4:7] = 66\n",
-        "GG[9,3:6] = 66\n",
-        "GG[10,2:5] = 66\n",
-        "GG[11,2:4] = 66\n",
-        "GG[12,2:3] = 66\n",
+        "  GG[4,2:10] = 66\n",
+        "  GG[5,2:9] = 66\n",
+        "  GG[6,6:9] = 66\n",
+        "  GG[7,5:8] = 66\n",
+        "  GG[8,4:7] = 66\n",
+        "  GG[9,3:6] = 66\n",
+        "  GG[10,2:5] = 66\n",
+        "  GG[11,2:4] = 66\n",
+        "  GG[12,2:3] = 66\n",
         "\n",
-        "print(GG)"
+        "  return GG"
       ],
       "metadata": {
-        "id": "_Z9_8M7vx8bC",
-        "outputId": "88d649f3-16ba-4a70-d39c-bd3e72eaeff0",
+        "id": "_Z9_8M7vx8bC"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "jaw_1(2)"
+      ],
+      "metadata": {
+        "id": "MzaCn9Yd0ggk",
+        "outputId": "92dedb2b-b237-4813-a019-3dc171f96285",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[ 3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.]\n",
-            " [ 3.  3. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66.  3.]\n",
-            " [ 3.  3. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66. 66.  3.]\n",
-            " [ 3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3. 66. 66. 66.]\n",
-            " [ 3.  3. 66. 66. 66. 66. 66. 66. 66. 66.  3.  3.  3. 66. 66. 66.  3.  3.]\n",
-            " [ 3.  3. 66. 66. 66. 66. 66. 66. 66.  3.  3.  3. 66. 66. 66.  3.  3.  3.]\n",
-            " [ 3.  3.  3.  3.  3.  3. 66. 66. 66.  3.  3. 66. 66. 66.  3.  3.  3.  3.]\n",
-            " [ 3.  3.  3.  3.  3. 66. 66. 66.  3.  3. 66. 66. 66.  3.  3.  3.  3.  3.]\n",
-            " [ 3.  3.  3.  3. 66. 66. 66.  3.  3. 66. 66. 66.  3.  3.  3.  3.  3.  3.]\n",
-            " [ 3.  3.  3. 66. 66. 66.  3.  3. 66. 66. 66.  3.  3.  3.  3.  3.  3.  3.]\n",
-            " [ 3.  3. 66. 66. 66.  3.  3. 66. 66. 66.  3.  3.  3.  3.  3.  3.  3.  3.]\n",
-            " [ 3.  3. 66. 66.  3.  3. 66. 66. 66.  3.  3.  3.  3.  3.  3.  3.  3.  3.]\n",
-            " [ 3.  3. 66.  3.  3. 66. 66. 66.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.]\n",
-            " [ 3.  3.  3.  3. 66. 66. 66.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.]\n",
-            " [ 3.  3.  3. 66. 66. 66.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.]\n",
-            " [ 3.  3. 66. 66. 66.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.]\n",
-            " [ 3.  3. 66. 66.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.]\n",
-            " [ 3.  3. 66.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.]\n",
-            " [ 3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.  3.]]\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,\n",
+              "         2.,  2.,  2.,  2.,  2.],\n",
+              "       [ 2.,  2., 66., 66., 66., 66., 66., 66., 66., 66., 66., 66., 66.,\n",
+              "        66., 66., 66., 66.,  2.],\n",
+              "       [ 2.,  2., 66., 66., 66., 66., 66., 66., 66., 66., 66., 66., 66.,\n",
+              "        66., 66., 66., 66.,  2.],\n",
+              "       [ 2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,\n",
+              "         2.,  2., 66., 66., 66.],\n",
+              "       [ 2.,  2., 66., 66., 66., 66., 66., 66., 66., 66.,  2.,  2.,  2.,\n",
+              "        66., 66., 66.,  2.,  2.],\n",
+              "       [ 2.,  2., 66., 66., 66., 66., 66., 66., 66.,  2.,  2.,  2., 66.,\n",
+              "        66., 66.,  2.,  2.,  2.],\n",
+              "       [ 2.,  2.,  2.,  2.,  2.,  2., 66., 66., 66.,  2.,  2., 66., 66.,\n",
+              "        66.,  2.,  2.,  2.,  2.],\n",
+              "       [ 2.,  2.,  2.,  2.,  2., 66., 66., 66.,  2.,  2., 66., 66., 66.,\n",
+              "         2.,  2.,  2.,  2.,  2.],\n",
+              "       [ 2.,  2.,  2.,  2., 66., 66., 66.,  2.,  2., 66., 66., 66.,  2.,\n",
+              "         2.,  2.,  2.,  2.,  2.],\n",
+              "       [ 2.,  2.,  2., 66., 66., 66.,  2.,  2., 66., 66., 66.,  2.,  2.,\n",
+              "         2.,  2.,  2.,  2.,  2.],\n",
+              "       [ 2.,  2., 66., 66., 66.,  2.,  2., 66., 66., 66.,  2.,  2.,  2.,\n",
+              "         2.,  2.,  2.,  2.,  2.],\n",
+              "       [ 2.,  2., 66., 66.,  2.,  2., 66., 66., 66.,  2.,  2.,  2.,  2.,\n",
+              "         2.,  2.,  2.,  2.,  2.],\n",
+              "       [ 2.,  2., 66.,  2.,  2., 66., 66., 66.,  2.,  2.,  2.,  2.,  2.,\n",
+              "         2.,  2.,  2.,  2.,  2.],\n",
+              "       [ 2.,  2.,  2.,  2., 66., 66., 66.,  2.,  2.,  2.,  2.,  2.,  2.,\n",
+              "         2.,  2.,  2.,  2.,  2.],\n",
+              "       [ 2.,  2.,  2., 66., 66., 66.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,\n",
+              "         2.,  2.,  2.,  2.,  2.],\n",
+              "       [ 2.,  2., 66., 66., 66.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,\n",
+              "         2.,  2.,  2.,  2.,  2.],\n",
+              "       [ 2.,  2., 66., 66.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,\n",
+              "         2.,  2.,  2.,  2.,  2.],\n",
+              "       [ 2.,  2., 66.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,\n",
+              "         2.,  2.,  2.,  2.,  2.],\n",
+              "       [ 2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,\n",
+              "         2.,  2.,  2.,  2.,  2.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
         }
       ]
     },
