--- a/Basic_Programming_Concepts.ipynb
+++ b/Basic_Programming_Concepts.ipynb
@@ -1021,105 +1021,79 @@
       "cell_type": "code",
       "source": [
         "def jaw_1(x) :\n",
-        "  GG = x * np.ones((19,18))\n",
+        "  GG = x * np.ones((16,13))\n",
         "#วงนอก\n",
-        "  GG[1,2:17] = 66\n",
-        "  GG[2,2:17] = 66\n",
-        "  GG[3,15:18] = 66\n",
-        "  GG[4,13:16] = 66\n",
-        "  GG[5,12:15] = 66\n",
-        "  GG[6,11:14] = 66\n",
-        "  GG[7,10:13] = 66\n",
-        "  GG[8,9:12] = 66\n",
-        "  GG[9,8:11] = 66\n",
-        "  GG[10,7:10] = 66\n",
-        "  GG[11,6:9] = 66\n",
-        "  GG[12,5:8] = 66\n",
-        "  GG[13,4:7] = 66\n",
-        "  GG[14,3:6] = 66\n",
-        "  GG[15,2:5] = 66\n",
-        "  GG[16,2:4] = 66\n",
-        "  GG[17,2:3] = 66\n",
+        "  GG[1,1:14] = 66\n",
+        "  GG[2,1:14] = 66\n",
+        "  GG[3,10:13] = 66\n",
+        "  GG[4,9:12] = 66\n",
+        "  GG[5,8:11] = 66\n",
+        "  GG[6,7:10] = 66\n",
+        "  GG[7,6:9] = 66\n",
+        "  GG[8,5:8] = 66\n",
+        "  GG[9,4:7] = 66\n",
+        "  GG[10,3:6] = 66\n",
+        "  GG[11,2:5] = 66\n",
+        "  GG[12,1:4] = 66\n",
+        "  GG[13,1:3] = 66\n",
+        "  GG[14,1:2] = 66\n",
         "\n",
         "#วงใน\n",
-        "  GG[4,2:10] = 66\n",
-        "  GG[5,2:9] = 66\n",
-        "  GG[6,6:9] = 66\n",
-        "  GG[7,5:8] = 66\n",
-        "  GG[8,4:7] = 66\n",
-        "  GG[9,3:6] = 66\n",
-        "  GG[10,2:5] = 66\n",
-        "  GG[11,2:4] = 66\n",
-        "  GG[12,2:3] = 66\n",
+        "  GG[4,1:8] = 66\n",
+        "  GG[5,1:7] = 66\n",
+        "  GG[6,4:6] = 66\n",
+        "  GG[7,3:5] = 66\n",
+        "  GG[8,2:4] = 66\n",
+        "  GG[9,1:3] = 66\n",
+        "  GG[10,1:2] = 66\n",
+        "\n",
         "\n",
         "  return GG"
       ],
       "metadata": {
         "id": "_Z9_8M7vx8bC"
       },
-      "execution_count": 2,
+      "execution_count": 28,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "jaw_1(2)"
+        "jaw_1(8)"
       ],
       "metadata": {
-        "id": "MzaCn9Yd0ggk",
-        "outputId": "92dedb2b-b237-4813-a019-3dc171f96285",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MzaCn9Yd0ggk",
+        "outputId": "c639cab9-a1e0-46f0-f325-732204c9532a"
       },
-      "execution_count": 3,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[ 2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,\n",
-              "         2.,  2.,  2.,  2.,  2.],\n",
-              "       [ 2.,  2., 66., 66., 66., 66., 66., 66., 66., 66., 66., 66., 66.,\n",
-              "        66., 66., 66., 66.,  2.],\n",
-              "       [ 2.,  2., 66., 66., 66., 66., 66., 66., 66., 66., 66., 66., 66.,\n",
-              "        66., 66., 66., 66.,  2.],\n",
-              "       [ 2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,\n",
-              "         2.,  2., 66., 66., 66.],\n",
-              "       [ 2.,  2., 66., 66., 66., 66., 66., 66., 66., 66.,  2.,  2.,  2.,\n",
-              "        66., 66., 66.,  2.,  2.],\n",
-              "       [ 2.,  2., 66., 66., 66., 66., 66., 66., 66.,  2.,  2.,  2., 66.,\n",
-              "        66., 66.,  2.,  2.,  2.],\n",
-              "       [ 2.,  2.,  2.,  2.,  2.,  2., 66., 66., 66.,  2.,  2., 66., 66.,\n",
-              "        66.,  2.,  2.,  2.,  2.],\n",
-              "       [ 2.,  2.,  2.,  2.,  2., 66., 66., 66.,  2.,  2., 66., 66., 66.,\n",
-              "         2.,  2.,  2.,  2.,  2.],\n",
-              "       [ 2.,  2.,  2.,  2., 66., 66., 66.,  2.,  2., 66., 66., 66.,  2.,\n",
-              "         2.,  2.,  2.,  2.,  2.],\n",
-              "       [ 2.,  2.,  2., 66., 66., 66.,  2.,  2., 66., 66., 66.,  2.,  2.,\n",
-              "         2.,  2.,  2.,  2.,  2.],\n",
-              "       [ 2.,  2., 66., 66., 66.,  2.,  2., 66., 66., 66.,  2.,  2.,  2.,\n",
-              "         2.,  2.,  2.,  2.,  2.],\n",
-              "       [ 2.,  2., 66., 66.,  2.,  2., 66., 66., 66.,  2.,  2.,  2.,  2.,\n",
-              "         2.,  2.,  2.,  2.,  2.],\n",
-              "       [ 2.,  2., 66.,  2.,  2., 66., 66., 66.,  2.,  2.,  2.,  2.,  2.,\n",
-              "         2.,  2.,  2.,  2.,  2.],\n",
-              "       [ 2.,  2.,  2.,  2., 66., 66., 66.,  2.,  2.,  2.,  2.,  2.,  2.,\n",
-              "         2.,  2.,  2.,  2.,  2.],\n",
-              "       [ 2.,  2.,  2., 66., 66., 66.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,\n",
-              "         2.,  2.,  2.,  2.,  2.],\n",
-              "       [ 2.,  2., 66., 66., 66.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,\n",
-              "         2.,  2.,  2.,  2.,  2.],\n",
-              "       [ 2.,  2., 66., 66.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,\n",
-              "         2.,  2.,  2.,  2.,  2.],\n",
-              "       [ 2.,  2., 66.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,\n",
-              "         2.,  2.,  2.,  2.,  2.],\n",
-              "       [ 2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,\n",
-              "         2.,  2.,  2.,  2.,  2.]])"
+              "array([[ 8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.],\n",
+              "       [ 8., 66., 66., 66., 66., 66., 66., 66., 66., 66., 66., 66., 66.],\n",
+              "       [ 8., 66., 66., 66., 66., 66., 66., 66., 66., 66., 66., 66., 66.],\n",
+              "       [ 8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8., 66., 66., 66.],\n",
+              "       [ 8., 66., 66., 66., 66., 66., 66., 66.,  8., 66., 66., 66.,  8.],\n",
+              "       [ 8., 66., 66., 66., 66., 66., 66.,  8., 66., 66., 66.,  8.,  8.],\n",
+              "       [ 8.,  8.,  8.,  8., 66., 66.,  8., 66., 66., 66.,  8.,  8.,  8.],\n",
+              "       [ 8.,  8.,  8., 66., 66.,  8., 66., 66., 66.,  8.,  8.,  8.,  8.],\n",
+              "       [ 8.,  8., 66., 66.,  8., 66., 66., 66.,  8.,  8.,  8.,  8.,  8.],\n",
+              "       [ 8., 66., 66.,  8., 66., 66., 66.,  8.,  8.,  8.,  8.,  8.,  8.],\n",
+              "       [ 8., 66.,  8., 66., 66., 66.,  8.,  8.,  8.,  8.,  8.,  8.,  8.],\n",
+              "       [ 8.,  8., 66., 66., 66.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.],\n",
+              "       [ 8., 66., 66., 66.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.],\n",
+              "       [ 8., 66., 66.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.],\n",
+              "       [ 8., 66.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.],\n",
+              "       [ 8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.,  8.]])"
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 31
         }
       ]
     },
