--- a/Basic_Programming_Concepts.ipynb
+++ b/Basic_Programming_Concepts.ipynb
@@ -1014,7 +1014,7 @@
       "metadata": {
         "id": "IvD-zlG_yWCD"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1053,7 +1053,7 @@
       "metadata": {
         "id": "_Z9_8M7vx8bC"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1068,7 +1068,7 @@
         "id": "MzaCn9Yd0ggk",
         "outputId": "c639cab9-a1e0-46f0-f325-732204c9532a"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1156,8 +1156,8 @@
       "source": [
         "### operator ที่ใช้ตรวจสอบ condition\n",
         "\n",
-        "== (เท่ากับ) , != (ไม่เท่ากับ), >=, <=, <, >, and, or\n",
-        "- ผลลัพธ์มีแค่ Ture flase"
+        "== (เท่ากับ) , != (ไม่เท่ากับ), >=, <=, <, >, and, or,&,|\n",
+        "- ผลลัพธ์มีแค่ True flase"
       ],
       "metadata": {
         "id": "AepkrHEKkA7v"
