--- a/Pandas101.ipynb
+++ b/Pandas101.ipynb
@@ -13426,12 +13426,12 @@
         "data1.isnull()"
       ],
       "metadata": {
-        "id": "QHp1BFTXCSfO",
-        "outputId": "acd33a24-b658-4e84-df8f-ae122aba9648",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "QHp1BFTXCSfO",
+        "outputId": "acd33a24-b658-4e84-df8f-ae122aba9648"
       },
       "execution_count": 38,
       "outputs": [
@@ -13793,11 +13793,11 @@
         "data1.isnull().any() # .any() เอาค่าความจริงใน column มา OR กัน"
       ],
       "metadata": {
-        "id": "LYM2cpmACtt8",
-        "outputId": "0ad70480-737a-4e42-f3f3-830bdb86f655",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LYM2cpmACtt8",
+        "outputId": "0ad70480-737a-4e42-f3f3-830bdb86f655"
       },
       "execution_count": 39,
       "outputs": [
@@ -13908,11 +13908,11 @@
         "data1.shape"
       ],
       "metadata": {
-        "id": "E3Dzi37vF1P7",
-        "outputId": "9408fb2b-c1f3-4c92-a107-393535103188",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "E3Dzi37vF1P7",
+        "outputId": "9408fb2b-c1f3-4c92-a107-393535103188"
       },
       "execution_count": 43,
       "outputs": [
@@ -13934,12 +13934,12 @@
         "data1.dropna()"
       ],
       "metadata": {
-        "id": "DV5vfATaFuVT",
-        "outputId": "cdbede78-5e1a-467a-9941-e1ae30c8c91d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "DV5vfATaFuVT",
+        "outputId": "cdbede78-5e1a-467a-9941-e1ae30c8c91d"
       },
       "execution_count": 42,
       "outputs": [
@@ -14327,11 +14327,11 @@
         "data1.dropna().shape"
       ],
       "metadata": {
-        "id": "b7Vee7wzF6hQ",
-        "outputId": "acda58a4-49b1-40b0-8a44-5b4168f0927b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "b7Vee7wzF6hQ",
+        "outputId": "acda58a4-49b1-40b0-8a44-5b4168f0927b"
       },
       "execution_count": 44,
       "outputs": [
@@ -14731,9 +14731,10 @@
         "##HW3\n",
         "\n",
         "\n",
-        "*   List item\n",
-        "*   List item\n",
-        "\n"
+        "1.   รายการที่แพงและถูกที่สุดคือรายการไหน\n",
+        "2.   รายการขุดลอกคูคลองของ 'สำนักงานเขตคลองสาม' และ'สำนักงานเขตคลองสามวา'\n",
+        "3.   จากข้อ 2 เขตไหนใช้งบประมาณมากที่สุด\n",
+        "4.   Core Budget ไหน ('12-เงินสำรองจ่ายทั่วไป กรณีค่าใช้จ่ายต่างๆ เกี่ยวกับน้ำท่วม' , '17-เงินสำรองจ่ายทั่วไป กรณีค่าใช้จ่ายเพือ่การพัฒนากรุงเทพมหานคร' , '28-เงินสำรองค่าใช้จ่าย ในการพัฒนาเขต') มีค่าเฉลี่ยงบประมาณที่ถูกอนุมัติสูงที่สุด\n"
       ],
       "metadata": {
         "id": "9er5EylDL5w9"
