--- a/ปลายภาค.ipynb
+++ b/ปลายภาค.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,6 +44,26 @@
       "metadata": {
         "id": "k1HwrQfwjVw3"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Link Dashboard"
+      ],
+      "metadata": {
+        "id": "07UmAPCNnNzs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "https://lookerstudio.google.com/u/0/reporting/c94f0d86-9cad-4001-a2d7-2916c8d14641/page/pSYfD/edit?fbclid=IwAR1RfbyhNed-JAyiHAJyUYRWt7-cj4bDVuGQyXqu08OdArmNdSEA7FQ4JxM"
+      ],
+      "metadata": {
+        "id": "jEYdEo-OnTkk"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2368,6 +2387,25 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#คำอธิบาย\n",
+        "\n",
+        "• Piechart แรกคือ ประเภทการชำระเงินที่คนชอบใช้บริการมากที่สุดทั้ง 3 ช่วงเวลา\n",
+        "โดยการจ่ายด้วยเงินสดคิดเป็นร้อยละ 51.9\n",
+        "และการจ่ายด้วยบัตรคิดเป็นรอยละ 48.1\n",
+        "• Treemap แสดงรหัสพนักงานที่มาทำงานบ่อยที่สุด\n",
+        "• จากกราฟแผนภูมิแท่งคือ การซื้อของของลูกค้ามีความพึงพอใจในแต่ละระดับมากน้อยเท่าใด.\n",
+        "• กราฟแผนรูปมิวงกลม แสดงยอดค่าใช้จ่ายรวมประเภทการชำระเงิน\n",
+        "ซึ่งการชำระเงินแบบเงินสดคิดเป็นร้อยละ 42.4 และการชำระเงินแบบใช้บัตรคิดเป็นร้อยละ 57.6\n",
+        "• กราฟแผนภูมิแท่งแสดงรายได้รวมต่อปีของปี 2017 และ 2019\n",
+        "•กราฟแผนภูมิเแท่ง คือการเปรียบเทียบระยะเวลาการใช้บริการเฉลี่ย ซึ่งจะมีการบริการตนเองและบริการโดยใช้พนักงาน"
+      ],
+      "metadata": {
+        "id": "MsGCRIpfneZ0"
+      }
     }
   ]
 }
